--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>RJ पापड़ — Language-specific Banners + AutoSave</title>
+<title>RJ पापड़ — Form First + Auto Save</title>
 <style>
   *{margin:0;padding:0;box-sizing:border-box}
   html,body{height:100%;width:100%;font-family:'Noto Sans Devanagari',sans-serif;background:#fff8e1;color:#222;overflow-x:hidden}
-  /* Splash */
   #logoArea{position:fixed;top:0;left:0;width:100vw;height:100vh;background:#fff;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:1000;transition:opacity .6s ease}
   #logoArea img{width:70vw;max-width:320px;height:auto;margin-bottom:18px;border-radius:10px}
   .lang-bar{display:flex;gap:10px}
@@ -21,12 +20,8 @@
   h1{text-align:center;color:#c47f00;margin:10px 0 15px;font-size:22px}
   .form-card{background:#fff;padding:16px;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,0.08);max-width:720px;margin:10px auto}
   input{width:100%;padding:10px;margin:6px 0;border:1px solid #ccc;border-radius:6px;font-size:15px}
-  .controls{display:flex;gap:8px;margin-top:8px;flex-wrap:wrap}
   .save-btn{background:#ffc107;border:none;padding:10px 16px;border-radius:8px;font-weight:700;cursor:pointer}
   .save-btn:hover{background:#ffb300}
-  .small-btn{background:#eee;border:none;padding:8px 10px;border-radius:8px;cursor:pointer}
-  .reg-item{background:#fff7e6;padding:8px;margin:8px 0;border-radius:8px;display:flex;flex-wrap:wrap;align-items:center;gap:8px}
-  .icon-btn{background:#fff;border:1px solid #ddd;padding:6px 8px;border-radius:6px;cursor:pointer}
   footer{text-align:center;color:#666;margin:20px 0;font-size:13px}
   @media(max-width:520px){#logoArea img{width:80vw}}
 </style>
@@ -44,178 +39,101 @@
 </div>
 
 <div class="site">
-  <!-- SINGLE CONTENT AREA: banners and registrations update per-language -->
+  <!-- CONTENT AREA -->
   <section id="langContent" class="content">
-    <img id="topBanner" class="banner" src="" alt="Top Banner">
-    <h1 id="titleText">RJ पापड़</h1>
-
+    <!-- 🟢 FORM सबसे ऊपर -->
     <div class="form-card">
-      <div class="controls">
-        <button class="save-btn" onclick="saveAll()">💾 Save</button>
-        <button class="small-btn" onclick="addRegistrant()">➕ Add / ज्वाइंट जोड़ें</button>
-      </div>
-      <div id="regs"></div>
+      <h1 id="titleText">RJ पापड़</h1>
+      <form onsubmit="return false;">
+        <input id="name" type="text" placeholder="नाम / Name">
+        <input id="mobile" type="tel" placeholder="मोबाइल नंबर / Mobile Number">
+        <button class="save-btn" type="button" onclick="saveForm()">💾 सेव करें</button>
+      </form>
     </div>
 
+    <!-- 🔹 BANNERS नीचे -->
+    <img id="topBanner" class="banner" src="" alt="Top Banner">
     <img id="bottomBanner" class="banner" src="" alt="Bottom Banner">
   </section>
 </div>
 
-<footer>© 2025 RJ पापड़</footer>
+<footer>© 2025 RJ पापड़ | Auto Save Enabled</footer>
 
 <script>
-/*
- Storage structure:
- {
-   lang: null|'hi'|'en'|'gu',
-   data: {
-     hi: { list: [ {name,mobile}, ... ] },
-     en: { list: [...] },
-     gu: { list: [...] }
-   }
- }
-*/
-const STORAGE_KEY = "rjpapad_lang_banners_v1";
+const STORAGE_KEY="rjpapad_form_simple_v1";
 
-/* Language-specific banners and titles (change URLs if you have other images) */
-const LANG_CONF = {
-  hi: {
-    title: "RJ पापड़ में आपका स्वागत है!",
-    top: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
-    bottom: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+/* Language banners and titles */
+const LANG_CONF={
+  hi:{
+    title:"RJ पापड़ में आपका स्वागत है!",
+    top:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
+    bottom:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
   },
-  en: {
-    title: "Welcome to RJ Papad!",
-    top: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
-    bottom: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
+  en:{
+    title:"Welcome to RJ Papad!",
+    top:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png",
+    bottom:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
   },
-  gu: {
-    title: "RJ પાપડ માં આપનું સ્વાગત છે!",
-    top: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
-    bottom: "https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
+  gu:{
+    title:"RJ પાપડ માં આપનું સ્વાગત છે!",
+    top:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png",
+    bottom:"https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"
   }
 };
 
-/* Helpers: load/save state */
+/* State handling */
 function loadState(){
   try{
-    const raw = localStorage.getItem(STORAGE_KEY);
-    if(!raw){
-      return { lang:null, data:{ hi:{list:[]}, en:{list:[]}, gu:{list:[]} } };
-    }
-    const parsed = JSON.parse(raw);
-    parsed.data = parsed.data || { hi:{list:[]}, en:{list:[]}, gu:{list:[]} };
-    parsed.data.hi = parsed.data.hi || {list:[]};
-    parsed.data.en = parsed.data.en || {list:[]};
-    parsed.data.gu = parsed.data.gu || {list:[]};
-    return parsed;
-  }catch(e){
-    console.error(e);
-    return { lang:null, data:{ hi:{list:[]}, en:{list:[]}, gu:{list:[]} } };
-  }
+    const r=localStorage.getItem(STORAGE_KEY);
+    if(!r)return{lang:null,data:{hi:{},en:{},gu:{}}};
+    return JSON.parse(r);
+  }catch{return{lang:null,data:{hi:{},en:{},gu:{}}}}
 }
-function saveState(state){ localStorage.setItem(STORAGE_KEY, JSON.stringify(state)); }
+function saveState(s){localStorage.setItem(STORAGE_KEY,JSON.stringify(s));}
 
-/* Render registrations for currently selected language */
-function renderRegistrationsFor(lang){
-  const container = document.getElementById("regs");
-  container.innerHTML = "";
-  const state = loadState();
-  const list = state.data[lang].list || [];
-  if(list.length === 0){
-    // show one empty row by default
-    addRegistrant(lang);
-    return;
-  }
-  list.forEach((r, idx) => {
-    const row = document.createElement("div");
-    row.className = "reg-item";
-
-    const name = document.createElement("input");
-    name.type = "text";
-    name.placeholder = (lang==='hi'?'नाम (वैकल्पिक)': (lang==='en'?'Name (Optional)':'નામ (વૈકલ્પિક)'));
-    name.value = r.name || "";
-    name.oninput = ()=> updateRegistrant(lang, idx, name.value, mobile.value);
-
-    const mobile = document.createElement("input");
-    mobile.type = "tel";
-    mobile.placeholder = (lang==='hi'?'मोबाइल नंबर (अनिवार्य)': (lang==='en'?'Mobile Number (Required)':'મોબાઇલ નંબર (આવશ્યક)'));
-    mobile.value = r.mobile || "";
-    mobile.oninput = ()=> updateRegistrant(lang, idx, name.value, mobile.value);
-
-    const del = document.createElement("button");
-    del.className = "icon-btn";
-    del.textContent = "🗑️";
-    del.onclick = ()=> deleteRegistrant(lang, idx);
-
-    row.appendChild(name);
-    row.appendChild(mobile);
-    row.appendChild(del);
-    container.appendChild(row);
-  });
+/* Save form data */
+function saveForm(){
+  const s=loadState();
+  const lang=s.lang||'hi';
+  const name=document.getElementById("name").value;
+  const mobile=document.getElementById("mobile").value;
+  s.data[lang]={name,mobile};
+  saveState(s);
+  alert("✅ डेटा सेव हो गया!");
 }
 
-/* Add / update / delete functions (per language) */
-function addRegistrant(lang){
-  const state = loadState();
-  state.data[lang].list.push({ name:"", mobile:"" });
-  saveState(state);
-  renderRegistrationsFor(lang);
-}
-
-function updateRegistrant(lang, idx, name, mobile){
-  const state = loadState();
-  state.data[lang].list[idx] = { name, mobile };
-  saveState(state);
-}
-
-function deleteRegistrant(lang, idx){
-  if(!confirm("क्या आप इस एंट्री को हटाना चाहते हैं? / Delete this entry?")) return;
-  const state = loadState();
-  state.data[lang].list.splice(idx, 1);
-  saveState(state);
-  renderRegistrationsFor(lang);
-}
-
-function saveAll(){
-  alert("✅ डेटा सेव हो गया (saved).");
-}
-
-/* Choose language — triggered only by user click on splash */
+/* Choose language and show banners accordingly */
 function chooseLang(lang){
   // hide splash
-  const logo = document.getElementById("logoArea");
-  logo.style.opacity = "0";
-  setTimeout(()=>{ logo.style.display = "none"; }, 650);
+  const logo=document.getElementById("logoArea");
+  logo.style.opacity="0";
+  setTimeout(()=>{logo.style.display="none";},600);
 
-  // set state
-  const state = loadState();
-  state.lang = lang;
-  saveState(state);
-
-  // set banners/titles for this language
-  const conf = LANG_CONF[lang] || LANG_CONF.hi;
-  document.getElementById("topBanner").src = conf.top;
-  document.getElementById("bottomBanner").src = conf.bottom;
-  document.getElementById("titleText").textContent = conf.title;
-
-  // show content section
+  const s=loadState(); s.lang=lang; saveState(s);
+  const conf=LANG_CONF[lang];
+  document.getElementById("titleText").textContent=conf.title;
+  document.getElementById("topBanner").src=conf.top;
+  document.getElementById("bottomBanner").src=conf.bottom;
   document.getElementById("langContent").classList.add("active");
 
-  // render registrations for this language
-  renderRegistrationsFor(lang);
-
-  // scroll to top
-  window.scrollTo({ top: 0, behavior: "smooth" });
+  // load saved data for language
+  const vals=s.data[lang]||{};
+  document.getElementById("name").value=vals.name||"";
+  document.getElementById("mobile").value=vals.mobile||"";
 }
 
-/* Auto-save entire state every 5s (redundant because updateRegistrant saves on typing) */
-setInterval(()=>{ const s = loadState(); saveState(s); }, 5000);
+/* Auto-save every 5 seconds */
+setInterval(()=>{
+  const s=loadState();
+  const lang=s.lang||'hi';
+  const name=document.getElementById("name").value;
+  const mobile=document.getElementById("mobile").value;
+  if(lang)s.data[lang]={name,mobile};
+  saveState(s);
+},5000);
 
-/* On load: always show splash (logo). Do NOT auto-open last language. */
-window.addEventListener("DOMContentLoaded", ()=>{
-  document.getElementById("logoArea").style.display = "flex";
-});
+/* Always start with logo visible */
+window.addEventListener("DOMContentLoaded",()=>{document.getElementById("logoArea").style.display="flex";});
 </script>
 </body>
 </html>
